--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 	<form id="searchForm" method="get">
     <!-- TODO: add form elements -->
 		<input type="text" name="q" value="">
-		<input type="radio" name="engine" id="google" value="google">
+		<input type="radio" name="engine" value="google">
 		<label for="google">Google</label>
 
-		<input type="radio" name="engine" id="duckDuckGo" value="duckDuckGo">
+		<input type="radio" name="engine" value="duckDuckGo">
 		<label for="duckduckgo">DuckDuckGo</label>
 
-		<input type="radio" name="engine" id="bing" value="bing">
+		<input type="radio" name="engine" value="bing">
 		<label for="google">Bing</label>
 
-		<input type="radio" name="engine" id="ask" value="ask">
+		<input type="radio" name="engine" value="ask">
 		<label for="ask">Ask</label>
 	</form>
 
